--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -160,9 +160,9 @@
     <string name="settings_enable_enhanced_security_summary">Enable stricter security policies.</string>
     <string name="feature_status_unsupported_summary">Kernel does not support this feature.</string>
     <string name="feature_status_managed_summary">This feature is managed by a module.</string>
-    <string name="settings_mode_default">Default</string>
-    <string name="settings_mode_temp_enable">Temporarily enable</string>
-    <string name="settings_mode_always_enable">Permanently enable</string>
+    <string name="settings_mode_default">OFF</string>
+    <string name="settings_mode_temp_enable">ON</string>
+    <string name="settings_mode_always_enable">ALWAYS ON</string>
     <string name="processing">Processing…</string>
     <string name="refresh_pulling">Pull down to refresh</string>
     <string name="refresh_release">Release to refresh</string>
